# burl

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml  slodd-notify.yml
doc/: notes.md
example/: usage.cpp
include/boost/burl/: auth.hpp  body_tags.hpp  cookies.hpp  error.hpp  fwd.hpp  options.hpp  response.hpp  session.hpp
reference/: integration-plan-1.md
src/: auth.cpp  cookies.cpp  session.cpp
test/: auth.cpp  cookies.cpp  error.cpp  options.cpp  response.cpp  session.cpp
